--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": false,
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.4",
     "morgan": "^1.10.0"
