--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon app"
   }
 }
