--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "nodemon app"
+    "start": "brave-browser 'http://localhost:3000' && nodemon app"
   }
 }
